--- a/mouse-events/styles.css
+++ b/mouse-events/styles.css
@@ -1,79 +1,37 @@
-body {
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-.main-container {
-    width: 100vw;
+  }
+  .mainCntnr {
+    background: white;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
-}
+    padding: 0px 60px;
+  }
 
-.images-container {
+  .cardsCntnr {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
-    height: 50%;
-}
-
-/* .image  {
-    width: 33%;
-}
-
-.image img {
-    width: 100%;
-    height: auto;
-} */
-
-.image-1 {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.image-1 img {
-    width: 80%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 25px;
-}
-
-.image-2 {
-    width: 25%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.image-2 img {
-    width: 20%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 25px;
-}
-
-.image-3 {
-    width: 25%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.image-3 img {
-    width: 20%;
+    flex: 1;
+    gap: 1rem;
+    padding-left: 50px;
+  }
+  .imgCntnr {
+    flex: 4;
+    height: 550px;
+    cursor: pointer;
+    transition: all 0.5s;
+    animation-timing-function: linear;
+  }
+  .imgCntnr img {
+    max-width: 100%;
+    border-radius: 20px;
     object-fit: cover;
     height: 100%;
-    border-radius: 25px;
-}
-
-img {
-    transition: all .3s;
-}
+  }
+  .active {
+    flex: 1.5;
+    transition: 0.5s;
+  }
