--- a/react-api-call-products/react-api-call-products/src/index.css
+++ b/react-api-call-products/react-api-call-products/src/index.css
@@ -2,12 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
